SERVER-15106 properly initialize nscanned and nscannedObjects in IDHackRunner